Add API routes for Vercel

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copiez ce fichier en .env et modifiez les valeurs
 
 # Base de données PostgreSQL
-DATABASE_URL=postgresql://postgres:[Nono.B260500]@db.rywfyerodwdutgllqiyw.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:Nono.B260500@db.rywfyerodwdutgllqiyw.supabase.co:5432/postgres
 
 # Environnement
 NODE_ENV=production
