--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
+  "builds": [
+    { "src": "api/**/*.ts", "use": "@vercel/node" },
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
   "routes": [
     { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
-  ],
-  "functions": {
-    "api/**/*.ts": {
-      "includeFiles": "shared/**"
-    }
-  }
+  ]
 }
